Fixed z-index

--- a/style.css
+++ b/style.css
@@ -43,20 +43,22 @@ h1 {
   cursor: none;
 }
 .mouse {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   position: absolute;
   left: var(--mouse-x);
   top: var(--mouse-y);
   background-image: url("http://www.clker.com/cliparts/c/b/b/e/11954217511527806368hammer_david_benjamin_01.svg.thumb.png");
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: 3;
-  transition: 0.1s ease;
-  transform: rotate3d(0, 1, 0, -180deg);
+  transition: 0.05s ease-in-out;
+  transform: rotate3d(0, 1, 0, -180deg) translate(20px, -20px);
+  z-index: 1;
+  /* Fix for z-index */
+  pointer-events: none;
 }
 .clicked {
-  transform: rotate3d(0, 1, 0, -180deg) rotate(45deg);
+  transform: rotate3d(0, 1, 0, -180deg) rotate(70deg);
 }
 .hole {
   flex: 1 0 33.33%;
@@ -72,7 +74,7 @@ h1 {
   width: 100%;
   height: 70px;
   position: absolute;
-  z-index: 2;
+
   bottom: -30px;
 }
 
